samples/_failures_safe/1761724584_07d6c8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a53d472.c: In function ‘main’:
./samples/SAFE/__tmp_2a53d472.c:162:13: error: expected expression at end of input
  162 |             if (!handle_processing(&
      |             ^~
./samples/SAFE/__tmp_2a53d472.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2a53d472.c:162:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_2a53d472.c:162:13: error: expected declaration or statement at end of input
